--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^1.18.9",
-    "request": "^2.88.0"
-  },
-  "devDependencies": {
+    "request": "^2.88.0",
     "express": "^4.16.4",
     "pg": "^7.8.0"
   }
