--- a/proxy/package.json
+++ b/proxy/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.16.4",
     "request": "^2.88.0"
   }
